# persistence

./: .flake8  .gitignore  .pre-commit-config.yaml  .reports.py.swp  CONTRIBUTING.md  README.md  Vacations.py  about_company.py  history.py  it_and_digital.py  keyboard.py  main.py  manufacture_parser.py  office.py  pyproject.toml  reports.py  requirements.txt  share_capital.py  stock.py  support.py  young_professional.py
.github/: PULL_REQUEST_TEMPLATE.md
persistence/: about_company.py  history.py  it_and_digital.py  job_parser.py  keyboard.py  main.py  manufacture_parser.py  office.py  reports.py  sql.py  stock.py  support.py  vacancies.py  vacancy_parser.py  vacations.db  young_professional.py
