[tool.black]
line-length = 79

[tool.poetry]
name = "persistence"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
aiogram = "^2.14.3"
investpy = "^1.0.7"

[tool.poetry.dev-dependencies]
# pre-commit
pre-commit = "^2.13.0"
# linters and formatters
black = "^21.6-beta.0"
flake8 = "^3.9.2"
flake8-docstrings = "^1.6.0"
flake8-bugbear = "^21.4.3"
flake8-comprehensions = "^3.5.0"

[tool.poetry.scripts]
bot = "persistence.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
